--- a/index.html
+++ b/index.html
@@ -464,16 +464,45 @@
 </div>
 
 
-
+<!-- Footer-->
 <footer class="footer">
+    <div class="footer-logo">
+        <img src="img/logo.png" alt="Footer Logo" class="footer-logo__img">
+        <p class="footer-logo__text">Copyright &copy; Atolye15</p>
+        <p class="footer-logo__text">All rights reserved</p>
+    </div>
 
+    <div class="footer-pro">
+        <h2 class="footer-pro__title">Products</h2>
+        <ul class="footer-pro__list">
+            <li class="footer-pro__list__item"><a href="#">Features</a></li>
+            <li class="footer-pro__list__item"><a href="#">Personal License</a></li>
+            <li class="footer-pro__list__item"><a href="#">Business License</a></li>
+            <li class="footer-pro__list__item"><a href="#">Pricing Options</a></li>
+        </ul>
+    </div>
+
+    <div class="footer-about">
+        <h2 class="footer-about__title">About</h2>
+        <ul class="footer-about__list">
+            <li class="footer-about__list__item"><a href="#">About</a></li>
+            <li class="footer-about__list__item"><a href="#">Careers</a></li>
+            <li class="footer-about__list__item"><a href="#">Business License</a></li>
+            <li class="footer-about__list__item"><a href="#">Pricing Options</a></li>
+        </ul>
+    </div>
+
+    <div class="footer-support">
+        <h2 class="footer-support__title">Support</h2>
+        <ul class="footer-support__list">
+            <li class="footer-support__list__item"><a href="#">Support Center</a></li>
+            <li class="footer-support__list__item"><a href="#">Help Desk</a></li>
+            <li class="footer-support__list__item"><a href="#">FAQ</a></li>
+        </ul>
+    </div>
 </footer>
 
 
-
-
-
-
-</div>
-</body>
+        </div>
+    </body>
 </html>
