--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
 <span clas><i class="dot-sm"></i><i class="dot-sm"></i><i class="fas fa-plane plane"></i><i class="dot-sm"></i><i class="dot-sm"></i> </span>
 İzmir (ADB)  
 </h1>
+<div class="total2"> <span>Toplam tutar</span> </div>
+
 <h1 class="flight__price">269.99 TL</h1>
 
 
