--- a/index.html
+++ b/index.html
@@ -126,12 +126,12 @@
     <div class="departure__card-bottom">
         <ul class="bottom-card__list">
             <li class="bottom-card__list-item">HTY</li>
-            <li class="bottom-card__list-item"><span></span></li>
-            <li class="bottom-card__list-item"><span></span></li>
+            <li class="bottom-card__list-item">&nbsp;</li>
+            <li class="bottom-card__list-item">&nbsp;</li>
             <li class="bottom-card__list-item">ADB</li>
             <li class="bottom-card__list-item">Süre</li>
             <li class="bottom-card__list-item">Transfer</li>
-            <li class="bottom-card__list-item"><span></span></li>
+            <li class="bottom-card__list-item">&nbsp;</li>
         </ul>
         <ul class="bottom-card__list2">
             <li class="bottom-card__list2-item">07:05</li>
