--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <script src="https://kit.fontawesome.com/17b48e235f.js"></script>
-<link rel="stylesheet" href="css/minify/main.css">
+<link rel="stylesheet" href="css/main.css">
 <title>Atölye15 | Flight</title>
 </head>
 <body>
