--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <script src="https://kit.fontawesome.com/17b48e235f.js"></script>
+<link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="css/main.css">
 <title>Atölye15 | Flight</title>
 </head>
@@ -60,6 +61,11 @@
 
 </div>
 
+
+
+
+
+
 <div class="total"> <span>Toplam tutar</span> </div>
 <div class="flight">
 <h1 class="flight__from-to">Ankara (ESB) 
@@ -84,7 +90,7 @@
 
 <div class="search-bar">
 <ul class="search-bar__list">
-<li class="search-bar__list-items"> <i class="fas fa-plane-departure"> Nerden ?</i></li>
+<li class="search-bar__list-items"> <i class="fas fa-plane-departure"> Nereden ?</i></li>
 <li class="search-bar__list-items"> <i class="fas fa-plane-arrival"> Nereye ?</i></li>
 <li class="search-bar__list-items"> <i class="fas fa-list-alt"> Gidiş / Dönüş tarihi seç</i></li>
 <li class="search-bar__list-items"> <i class="fas fa-user-alt"> Yolcu seç</i></li>
