--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
     </div>
 
 <ul class="navbar__list">
-    <li class="navbar__list-item"><a href="#header">Ana sayfa</a></li>
-    <li class="navbar__list-item"><a href="#ticket">Kampanyalar</a></li>
-    <li class="navbar__list-item"><a href="#ticket">Bilet İşlemleri</a></li>
-    <li class="navbar__list-item"><a href="#help">Yardım</a></li>
-    <li class="navbar__list-item"><i class="fas fa-search"></i></li>
+    <li class="navbar__list-item"><a href="#header" class="n-btn">Ana sayfa</a></li>
+    <li class="navbar__list-item"><a href="#ticket" class="n-btn">Kampanyalar</a></li>
+    <li class="navbar__list-item"><a href="#ticket" class="n-btn">Bilet İşlemleri</a></li>
+    <li class="navbar__list-item"><a href="#help" class="n-btn">Yardım</a></li>
+    <li class="navbar__list-item"><a href="#help" class="n-btn"><i class="fas fa-search"></i></a></li>
 </ul>
 
 
@@ -82,7 +82,7 @@
 <div class="flight__details">
     <span> <i class="dot"></i> 27 Eyl,Pzr - 08 Eki,Pts <i class="dot"></i> 1 Yetişkin <i class="dot"></i> Gidiş-Dönüş </span>
 </div>
-<a href="#" class="btn btn-yellow">Devam et <i class="fas fa-angle-right"></i></a>
+<a href="#" class="btn-main btn-main__yellow btn-hover">Devam et <i class="fas fa-angle-right"></i></a>
 </div>
 
 
@@ -502,29 +502,29 @@
     <div class="footer-pro">
         <h2 class="footer-pro__title">Products</h2>
         <ul class="footer-pro__list">
-            <li class="footer-pro__list__item"><a href="#">Features</a></li>
-            <li class="footer-pro__list__item"><a href="#">Personal License</a></li>
-            <li class="footer-pro__list__item"><a href="#">Business License</a></li>
-            <li class="footer-pro__list__item"><a href="#">Pricing Options</a></li>
+            <li class="footer-pro__list__item"><a href="#" class="f-btn" >Features</a></li>
+            <li class="footer-pro__list__item"><a href="#" class="f-btn">Personal License</a></li>
+            <li class="footer-pro__list__item"><a href="#" class="f-btn">Business License</a></li>
+            <li class="footer-pro__list__item"><a href="#" class="f-btn">Pricing Options</a></li>
         </ul>
     </div>
 
     <div class="footer-about">
         <h2 class="footer-about__title">About</h2>
         <ul class="footer-about__list">
-            <li class="footer-about__list__item"><a href="#">About</a></li>
-            <li class="footer-about__list__item"><a href="#">Careers</a></li>
-            <li class="footer-about__list__item"><a href="#">Business License</a></li>
-            <li class="footer-about__list__item"><a href="#">Pricing Options</a></li>
+            <li class="footer-about__list__item"><a href="#" class="f-btn">About</a></li>
+            <li class="footer-about__list__item"><a href="#" class="f-btn">Careers</a></li>
+            <li class="footer-about__list__item"><a href="#" class="f-btn">Business License</a></li>
+            <li class="footer-about__list__item"><a href="#" class="f-btn">Pricing Options</a></li>
         </ul>
     </div>
 
     <div class="footer-support">
         <h2 class="footer-support__title">Support</h2>
         <ul class="footer-support__list">
-            <li class="footer-support__list__item"><a href="#">Support Center</a></li>
-            <li class="footer-support__list__item"><a href="#">Help Desk</a></li>
-            <li class="footer-support__list__item"><a href="#">FAQ</a></li>
+            <li class="footer-support__list__item"><a href="#" class="f-btn">Support Center</a></li>
+            <li class="footer-support__list__item"><a href="#" class="f-btn">Help Desk</a></li>
+            <li class="footer-support__list__item"><a href="#" class="f-btn">FAQ</a></li>
         </ul>
     </div>
 </footer>
