--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
 
     
 <!-- NavBar -->
-<div class="navbar">
+<div class="navbar" id="js-nav">
 
 <img src="img/logo-trans.png" alt="Atölye15 logo" class="navbar__logo">
+<img src="img/logo.png" alt="Atölye15 logo" class="logo-dark">
+
 
       <!--NavBar for smaller screens-->
       <div class="navigation">
@@ -88,7 +90,7 @@
 
 </header>
 
-<div class="search-bar">
+<div class="search-bar"id="js-section-WP" >
 <ul class="search-bar__list">
 <li class="search-bar__list-items"> <i class="fas fa-plane-departure"> Nereden ?</i></li>
 <li class="search-bar__list-items"> <i class="fas fa-plane-arrival"> Nereye ?</i></li>
@@ -532,6 +534,7 @@
 
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-     <script src="js/moveto.js"></script>   
+        <script src="js/noframework.waypoints.min.js"></script>
+     <script src="js/main.js"></script>   
     </body>
 </html>
