--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <script src="https://kit.fontawesome.com/17b48e235f.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href="css/prefix/main.css">
 <title>Atölye15 | Flight</title>
 </head>
 <body>
